--- a/www/incomeExpenseList.html
+++ b/www/incomeExpenseList.html
@@ -244,7 +244,7 @@
             <div id="subTitle">Track Income & Control Expenses</div>
         </div>
         <div id="canvasBody" class="canvasBody">
-            <div class="noIncExpList">
+            <div class="noDataMsgBox">
                 No Income Or Expense Information Found
             </div>
             <!--<div class="itemIE">
