--- a/www/categoryList.html
+++ b/www/categoryList.html
@@ -304,7 +304,7 @@ function refillCatList(db)
         </div>
 
         <div id="canvasBody" class="canvasBody">
-            <div class="noDataMsgBox">
+            <div id="noDataMsgBox">
                 No Category Defined Yet.
             </div>
 
