--- a/www/incomeExpenseList.html
+++ b/www/incomeExpenseList.html
@@ -102,7 +102,7 @@
                                 logStep("Creating Row "+i, 0);
                                 if (NewBoxNeeded) {
                                     divItemIE = document.createElement("DIV");
-                                    divItemIE.className = "itemIE";
+                                    divItemIE.className = "dataItemList";
 
                                     //Creating Default Month Year Title
                                     //var divMy = getDiv("monthYearIE", getItemDateMonth(result.rows.item(i).IEDate));
