--- a/www/categoryList.html
+++ b/www/categoryList.html
@@ -77,7 +77,7 @@ function refillCatList(db)
                 if(rlen==0)
                 {
                     //showNoData(1); -- If there are zero records then add GENERAL category to the database.
-                    var strSQL = "INSERT INTO IECategories(catName, catShortName, catType) VALUES('GENERAL', 'GNR', 0),('UBER EXPENSE', 'UBRX', 2); ";
+                    var strSQL = "INSERT INTO IECategories(catName, catShortName, catType) VALUES(' GENERAL', 'GNR', 0),(' UBER EXPENSE', 'UBRX', 2); ";
 
                     db.transaction(function (tx) {
                         tx.executeSql(strSQL);
@@ -247,8 +247,9 @@ function refillCatList(db)
 
         function errorSQL(err)
         {
+            
             //Checking For Unique Key Error
-            if(err.includes("code 2067") || err.includes("Error Code : 2027") || err.includes("SQLITE_CONSTRAINT_UNIQUE")) 
+            if(err.indexOf("code 2067")>-1 || err.indexOf("Error Code : 2027")>-1 || err.indexOf("SQLITE_CONSTRAINT_UNIQUE")>-1) 
             {
                 alert("Category Name or Category Short Name Already Defined. You Must Define Unique Names.");
             }
