--- a/www/categoryList.html
+++ b/www/categoryList.html
@@ -347,8 +347,8 @@ function refillCatList(db)
                     <option value="1">Income</option>
                     <option value="2">Expense</option>
                 </select>
-                <button type="button" id="btnClose" onclick="showHideDiv(this.parentElement,0);">Cancel</input>
-                <button type="button" id="btnSave" onclick="saveCategory();">Save</input>
+                <button type="button" id="btnClose" onclick="showHideDiv(this.parentElement,0);">Cancel</button>
+                <button type="button" id="btnSave" onclick="saveCategory();">Save</button>
             </div>
             <div id="dataItemList">
                 <div class="catItem">
