--- a/www/IncomeExpense.html
+++ b/www/IncomeExpense.html
@@ -188,7 +188,7 @@
                     }
 
 
-                    db.executeSql(strsql,[],function (rx, result){
+                    db.executeSql(strSQL, [], function (rx, result){
                         if(results.rows.length==0)
                         {
                             alert("No "+strIncExp+" Category Defined");
