--- a/www/IncomeExpense.html
+++ b/www/IncomeExpense.html
@@ -146,12 +146,12 @@
 
         function fillIncomeCats()
         {
-            var strS = "select id, catName WHERE catType=0 or catType=1 order by catName";
+            var strS = "select id, catName from IECategories WHERE catType=0 or catType=1 order by catName";
             refillCategories(strS,1);
         }        
         function fillExpenseCats()
         {
-            var strS ="select id, catName WHERE catType=0 or catType=2 order by catName";
+            var strS ="select id, catName from IECategories WHERE catType=0 or catType=2 order by catName";
             refillCategories(strS,2);
         }
 
@@ -186,8 +186,8 @@
                         alert("Could not open database to fill category ddl.");
                         return;
                     }
-                    db.transaction(function (tx) {
-                        tx.executeSql(strSQL, [], function (rx, result){
+                    //db.transaction(function (tx) {
+                        db.executeSql(strSQL, [], function (rx, result){
                             if(results.rows.length==0)
                             {
                                 alert("No "+strIncExp+" Category Defined");
@@ -214,7 +214,7 @@
                             }
 
                         },errorCBCats);
-                    },errorCBCats);
+                    //},errorCBCats);
 
                 } catch (e) {
                     alert("ERROR: "+e.message)
